src/main/java/com/example/app/Utility/Errors/EntityName.java
package com.example.app.Utility.Errors;

public final class EntityName {
    public static final String USER = "Entity.User";
    public static final String DISTRICT = "Entity.District";
    public static final String PROVINCE = "Entity.Province";
    public static final String WARD = "Entity.Ward";
}
